# omega-trader

./: CLAUDE.md  Cargo.toml
src/: execution.rs  hmm.rs  kalman.rs  kelly.rs  lib.rs  signal.rs
src/broker/: ibkr.rs  mod.rs
src/executor/: guardrails.rs  mod.rs  tests.rs
